[package]
name = "mvp-keeper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Solana
solana-sdk = "2.1"
solana-client = "2.1"

# Crypto (MUST use sha3 to match on-chain program)
sha3 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"

# Scheduling — not used directly; we use tokio::time::interval instead
# tokio-cron-scheduler = "0.13"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for calling API service)
reqwest = { version = "0.12", features = ["json"] }

# Shared on-chain constants, PDA seeds, and account layouts
rewardz-mvp-api = { path = "../mvp-smart-contracts/api" }
